PR 21605: Fix border color of DocumentCard to align with onedrive itemtile.
 - Fix border color of DocumentCard to align with onedrive itemtile.

--- a/src/components/DocumentCard/DocumentCard.scss
+++ b/src/components/DocumentCard/DocumentCard.scss
@@ -2,7 +2,7 @@
 
 .ms-DocumentCard {
   background-color: #fafafa;
-  border: 1px solid $ms-color-neutralTertiaryAlt;
+  border: 1px solid $ms-color-neutralLight;
   box-sizing: border-box;
   max-width: 320px;
   min-width: 206px;
@@ -12,6 +12,7 @@
 
 .ms-DocumentCard--actionable:hover {
   cursor: pointer;
+  border-color: $ms-color-neutralTertiaryAlt;
 
   // Place a heavier border within the document card
   &:after {
@@ -21,7 +22,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    border: 2px solid $ms-color-neutralTertiaryAlt;
+    border: 1px solid $ms-color-neutralTertiaryAlt;
     pointer-events: none;
   }
 }
